# EdgeSeer

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
deployment/: pyproject.toml
devops/: main.py
edge/: main.py  pyproject.toml
seer/: main.py  pyproject.toml
