[project]
name = "edgeseer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"  # explained below
src = ["edge", "seer", "devops"]

select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
